# prospect

./: .env.ci  .gitignore  .release-please-manifest.json  README.md  docker-compose.prd.yml  docker-compose.stg.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy-stg.yml  integration-test.yml  release.yml
docs/: ENVIRONMENTS.md  doppler-architecture.md  workflow-alignment.md  workflows.md
scripts/: provision-collected-secrets.sh  provision-doppler-secrets.sh  provision-pb-schema.sh
services/api/: BEST_PRACTICES.md  CHANGELOG.md  doppler.yaml  pyproject.toml
services/api/app/: context.py  interface.py  main.py  middleware.py  schemas.py  sessions.py  settings.py  telemetry.py
services/api/app/handlers/chatwoot/: handler.py
services/api/app/routers/: leads.py  lists.py
services/api/tests/: conftest.py  test_channels.py  test_chatwoot_handler.py  test_chatwoot_integration.py  test_health.py  test_import_overwrite.py  test_subscribers.py
services/pocketbase/: pb_schema.dev.json
tools/dev/: gen_dev_schema.py  listmonk_init.py  pb_init.py  seed_chatwoot.py
